<resources>

    <string name="app_name">XGPushDemoV2</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">XGPushDemoV2</string>
    <string name="tcp">tcp</string>
    <string name="http">http</string>
    <string name="http_wap">http_wap</string>
    <string name="tpush_default">default</string>
    <string name="start_service">Start Service</string>
    <string name="register_push">Register Push</string>
    <string name="unregister_push">Unregister Push</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="request_push">Request Push</string>
    <string name="view_log">View Log</string>
    <string name="kill_process">Kill process</string>
    <string name="clear_cache">Clear cache</string>
    <string name="log_loading">Log loading&#8230;</string>
    <string name="set_tag">set_tag</string>
    <string name="del_tag">del_tag</string>

</resources>